--- a/config/database.yml
+++ b/config/database.yml
@@ -14,42 +14,49 @@
 # Configure Using Gemfile
 # gem 'pg'
 #
-development:
+
+default: &default
   adapter: postgresql
   encoding: unicode
-  database: map
-  pool: 5
-  username: steimz 
-  password: redplanet 
-  timeout: 5000
+  # For details on connection pooling, see Rails configuration guide
+  # https://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+
+development:
+  <<: *default
+  database: map_development
+  username: postgres
   host: localhost
- 
+
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
   #host: localhost
- 
+
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
   #port: 5432
- 
+
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
- 
+
   # Minimum log levels, in increasing order:
   #   debug5, debug4, debug3, debug2, debug1,
   #   log, notice, warning, error, fatal, and panic
   # Defaults to warning.
   #min_messages: notice
- 
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
-  encoding: unicode
-  database: 
-  pool: 5
-  username: 
-  password:
-  timeout: 5000
+  <<: *default
+  database: map_test
+  username: postgres
+  host: localhost
+
+production:
+  <<: *default
+  prepared_statements: false
+  advisory_locks: false
+  url: <%= ENV['DATABASE_URL'] %>
