--- a/config/database.yml
+++ b/config/database.yml
@@ -24,9 +24,10 @@ default: &default
 
 development:
   <<: *default
-  database: map_development
-  username: postgres
-  host: localhost
+  host: <%= ENV.fetch("DATABASE_HOST") { "localhost" } %>
+  port: <%= ENV.fetch("DATABASE_PORT") { "5432" } %>
+  database: <%= ENV.fetch("DATABASE_NAME") { "mars-images-db" } %>
+  username: <%= ENV.fetch("DATABASE_USERNAME") { "postgres" } %>
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
