--- a/config/database.yml
+++ b/config/database.yml
@@ -26,7 +26,7 @@ development:
   <<: *default
   database: map_development
   username: postgres
-  host: localhost
+  host: postgresql
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -53,7 +53,7 @@ test:
   <<: *default
   database: map_test
   username: postgres
-  host: localhost
+  host: postgresql
 
 production:
   <<: *default
