--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,10 @@ version: "3.3"
 volumes:
   redis-data: null
   postgres-data: null
+  gem_cache: null
 
 networks:
-  rover-map:
+  mars-images-network:
 
 services:
   redis:
@@ -16,7 +17,7 @@ services:
     volumes:
       - "redis-data:/data"
     networks:
-      - rover-map
+      - mars-images-network
 
   postgresql:
     image: "postgres:10"
@@ -27,4 +28,22 @@ services:
     volumes:
       - "postgres-data:/var/lib/postgresql/data"
     networks:
-      - rover-map
+      - mars-images-network
+
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    command: ["bundle", "exec", "rails", "server", "-b", "0.0.0.0"]
+    ports:
+      - "5000:5000"
+    env_file:
+      - .env
+    depends_on:
+      - postgresql
+      - redis
+    volumes:
+      - ./:/opt/app
+      - gem_cache:/usr/local/bundle/gems
+    networks:
+      - mars-images-network
