fix webpacker auto-reload

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ volumes:
   redis-data: null
   postgres-data: null
   gem_cache: null
+  exclude: null
 
 networks:
   mars-images-network:
@@ -30,6 +31,24 @@ services:
     networks:
       - mars-images-network
 
+  webpack:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    command: ./bin/webpack-dev-server
+    ports:
+      - "3035:3035"
+    environment:
+      NODE_ENV: development
+      RAILS_ENV: development
+      WEBPACKER_DEV_SERVER_HOST: 0.0.0.0
+    volumes:
+      - ./:/opt/app
+      - exclude:/opt/app/node_modules
+      - gem_cache:/usr/local/bundle/gems
+    networks:
+      - mars-images-network
+      
   web:
     build:
       context: .
@@ -47,23 +66,8 @@ services:
       - webpack
     volumes:
       - ./:/opt/app
+      - exclude:/opt/app/node_modules
       - gem_cache:/usr/local/bundle/gems
     networks:
       - mars-images-network
   
-  webpack:
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
-    command: ./bin/webpack-dev-server
-    ports:
-      - "3035:3035"
-    environment:
-      NODE_ENV: development
-      RAILS_ENV: development
-      WEBPACKER_DEV_SERVER_HOST: 0.0.0.0
-    volumes:
-      - ./:/opt/app
-      - gem_cache:/usr/local/bundle/gems
-    networks:
-      - mars-images-network
