--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,10 +1,10 @@
 # Dockerfile - Development environment
 FROM ruby:3.0.0
 
-ENV APP_HOME /opt/app
+ENV APP_HOME=/opt/app
 ENV BUNDLER_VERSION=2.2.11
 ARG SECRET_KEY_BASE=random
-ENV BUNDLE_PATH /usr/local/bundle/gems
+ENV BUNDLE_PATH=/usr/local/bundle/gems
 
 RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
 RUN echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
@@ -14,19 +14,17 @@ RUN apt-get update -qq && apt-get install -y build-essential nodejs yarn libpq-d
 RUN mkdir $APP_HOME
 WORKDIR $APP_HOME
 
-# Set the gemfile and install
-RUN echo "gem: --no-document" > ~/.gemrc
-RUN gem install bundler:2.2.11
-ADD Gemfile* $APP_HOME/
-
-RUN bundle check || bundle install -j2
-
 ADD package.json $APP_HOME/	
 ADD yarn.lock $APP_HOME/
 
-ADD . $APP_HOME
+# Set the gemfile and install
+RUN echo "gem: --no-document" > ~/.gemrc
+RUN gem install bundler:$BUNDLER_VERSION
+ADD Gemfile* $APP_HOME/
+
+RUN bundle check || bundle install -j2
 RUN yarn install --check-files
 
-EXPOSE 5000
-
 ENTRYPOINT ["./entrypoints/docker-entrypoint.sh"]
+
+ADD . $APP_HOME
